<resources>
    <string name="app_name">PanoAudioChat</string>
    <string name="create_chat_room">Create a chat room</string>
    <string name="local_song">Local Song</string>
    <string name="join_chat_room">Join a chat room</string>
    <string name="tips">Tips</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
    <string name="ok">OK</string>
    <string name="setting">Setting</string>
    <string name="setting_name">Name</string>
    <string name="setting_call_duration">Call Duration</string>
    <string name="setting_call_duration_minutes">90 Minutes</string>
    <string name="setting_max_participants">Max participants</string>
    <string name="setting_max_participants_people">100 People</string>
    <string name="setting_audio_pre_process">Audio Pre Process</string>
    <string name="setting_high_quality_audio_mode">High Quality Audio Mode</string>
    <string name="setting_voice_change">Voice Change</string>
    <string name="setting_audio_pre_process_tips">Use an external sound card after closing</string>
    <string name="setting_audio_pre_process_warning">Please set before joining the room</string>
    <string name="setting_send_feedback">Send Feedback</string>
    <string name="setting_debug_mode">Debug Mode</string>
    <string name="setting_debug_mode_tip">Enable debug mode will generate more logs(up to 200M). Please disable debug mode in time after debugging. Are you sure to enable debug mode?</string>
    <string name="setting_audio_log_upload">Audio Log Upload</string>
    <string name="setting_upload">Upload</string>
    <string name="setting_Version">Version</string>
    <string name="setting_feedback">Feedback</string>
    <string name="setting_feedback_problem_type">Problem Type</string>
    <string name="setting_feedback_problem_type_voice">Voice</string>
    <string name="setting_feedback_problem_type_general">General</string>
    <string name="setting_feedback_problem_des">Problem Description</string>
    <string name="setting_feedback_upload_log">Upload Log</string>
    <string name="setting_feedback_contact">Contact(Optional)</string>
    <string name="setting_feedback_contact_hint">Email\/Phone Number</string>
    <string name="setting_feedback_send">Send</string>
    <string name="room_create_failed">Failed to create the room</string>
    <string name="room_join_failed">Failed to join the room</string>
    <string name="room_id">Room ID</string>
    <string name="room_id_empty_warning">Room ID should not be empty!</string>
    <string name="room_id_hint">room ID\/room number</string>
    <string name="room_name_hint">nickname</string>
    <string name="room_name_empty_warning">Nickname should not be empty!</string>
    <string name="room_create">Create</string>
    <string name="room_join">Join</string>
    <string name="room_people_online">%1$d People Online</string>
    <string name="room_invite">Invite</string>
    <string name="room_inviting">Inviting…</string>
    <string name="room_apply">Apply</string>
    <string name="room_applying">Applying…</string>
    <string name="room_user_applying">%1$s is applying</string>
    <string name="room_user_applying_notice">Waiting to accepted applying…</string>
    <string name="room_user_invite_accept">Accept</string>
    <string name="room_user_apply_allow">Allow</string>
    <string name="room_user_apply_reject">Reject</string>
    <string name="room_mic_user_reject_toast">%1$s reject your invitation</string>
    <string name="room_mic_user_reject_timeout_toast">%1$s The audience has not accepted your invitation for a long time</string>
    <string name="room_user_apply_reject_toast">The anchor rejected your request!</string>
    <string name="room_user_apply_reject_timeout_toast">The anchor did not agree to your application for a long time</string>
    <string name="room_user_apply_reject_occupied_toast">The current wheat position is already occupied</string>
    <string name="room_anchor_invite">The anchor is inviting you</string>
    <string name="room_anchor_invite_success">You have been invited successful</string>
    <string name="room_user_killed_toast">The current mic has been closed</string>
    <string name="room_anchor_forbids_speak">The anchor forbids you to speak</string>
    <string name="room_unmute_mic">Open microphone</string>
    <string name="room_mute_mic">Close microphone</string>
    <string name="room_force_close_mic">Force Close microphone</string>
    <string name="room_leave_mic">Leave microphone</string>
    <string name="room_join_the_room">%1$s Joined the room</string>
    <string name="room_leave_the_room">%1$s Leaved the room</string>
    <string name="room_channel_failover">Connecting …</string>
    <string name="room_exit_and_disband">Exit and disband the room?</string>
    <string name="room_leave">Leave the room?</string>
    <string name="room_send_text_hint">send text</string>
    <string name="room_msg_send">Send</string>
    <string name="room_msg_empty_warning">Text cannot be empty!</string>
    <string name="room_ear_monitor_setting">Ear Monitor Setting</string>
    <string name="room_ear_monitor">Ear Monitor</string>
    <string name="room_ear_monitor_volume">Volume</string>
    <string name="room_ear_monitor_tips">Please plug in headphones</string>
    <string name="room_user_unknown">Unknown</string>
    <string name="room_invite_member_title">Choose Member</string>
    <string name="room_bgm_title">Background Music</string>
    <string name="room_bgm_add_local_music">Add Local Music</string>
    <string name="room_sound_effect">Sound Effect</string>
    <string name="room_close">The room has been close</string>
    <string name="permission_request_message">Please allow the permission requests</string>

    <string name="title_import_local_song_tips">Please put the audio files to be played into the "Pano/localSong" folder in the SD card</string>
    <string name="title_high_quality_audio_tips">Cannot play through the earpiece when the High Quality Audio mode is turned on</string>

    <string name="pano_title_ask_again">Permissions Required</string>
    <string name="pano_rationale_ask_again">
        This app may not work correctly without the requested permissions.
        Open the app settings screen to modify app permissions.
    </string>
    <string name="permission_required_title">Your application needs some permissions, otherwise you cannot use normally</string>
    <string name="title_member_unknown">Unknown Artist</string>
</resources>