<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <video.pano.audiochat.view.CommonTitle
        android:id="@+id/feedback_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:customTitle="@string/setting_feedback"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/problem_type"
        style="@style/setting_title_base_style"
        android:layout_marginTop="10dp"
        android:text="@string/setting_feedback_problem_type"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feedback_title" />

    <RadioGroup
        android:id="@+id/problem_type_tab"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        android:padding="2dp"
        app:layout_constraintTop_toBottomOf="@id/problem_type">

        <RadioButton
            android:id="@+id/voice_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="true"
            android:gravity="center_vertical"
            android:text="@string/setting_feedback_problem_type_voice"
            android:textColor="@color/color_333"
            android:textSize="15sp" />

        <RadioButton
            android:id="@+id/general_btn"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:checked="false"
            android:gravity="center_vertical"
            android:text="@string/setting_feedback_problem_type_general"
            android:textColor="@color/color_333"
            android:textSize="15sp" />
    </RadioGroup>

    <TextView
        android:id="@+id/problem_des"
        style="@style/setting_title_base_style"
        android:layout_marginTop="10dp"
        android:text="@string/setting_feedback_problem_des"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/problem_type_tab" />

    <EditText
        android:id="@+id/feedback_des_edit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_text_bg_small_radius"
        android:gravity="top|start"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/color_333"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/problem_des" />

    <TextView
        android:id="@+id/upload_log"
        style="@style/setting_title_base_style"
        android:layout_marginTop="10dp"
        android:text="@string/setting_feedback_upload_log"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/feedback_des_edit" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/upload_log_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="14dp"
        app:layout_constraintBottom_toBottomOf="@id/upload_log"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/upload_log" />

    <TextView
        android:id="@+id/contact"
        style="@style/setting_title_base_style"
        android:layout_marginTop="10dp"
        android:text="@string/setting_feedback_contact"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/upload_log" />

    <EditText
        android:id="@+id/contact_edit"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/edit_text_bg_small_radius"
        android:gravity="center_vertical"
        android:hint="@string/setting_feedback_contact_hint"
        android:inputType="text"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:textColor="@color/color_333"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="@id/contact"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/contact"
        app:layout_constraintTop_toTopOf="@id/contact" />

    <TextView
        android:id="@+id/send_btn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/btn_blue_bg"
        android:gravity="center"
        android:onClick="onClickSend"
        android:text="@string/setting_feedback_send"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/contact" />
</androidx.constraintlayout.widget.ConstraintLayout>