<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <video.pano.audiochat.view.CommonTitle
        android:id="@+id/create_chat_room_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:customTitle="@string/create_chat_room"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/room_id_tv"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="90dp"
        android:gravity="center"
        android:text="@string/room_id"
        android:textColor="@color/color_333"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_chat_room_title" />



    <video.pano.audiochat.view.ClearableEditText
        android:id="@+id/room_id_edit"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="90dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/room_id_hint"
        android:inputType="text"
        android:maxLength="20"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:singleLine="true"
        android:textColor="@color/color_333"
        android:textColorHint="#999"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/room_id_tv"
        app:layout_constraintTop_toBottomOf="@id/create_chat_room_title" />

    <TextView
        android:id="@+id/user_name_tv"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/setting_name"
        android:textColor="@color/color_333"
        android:textSize="15sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/room_id_edit" />

    <video.pano.audiochat.view.ClearableEditText
        android:id="@+id/user_name_edit"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/edit_text_bg"
        android:hint="@string/room_name_hint"
        android:inputType="text"
        android:maxLength="20"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:singleLine="true"
        android:textColor="@color/color_333"
        android:textColorHint="#999"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/user_name_tv"
        app:layout_constraintTop_toBottomOf="@id/room_id_tv" />

    <TextView
        android:id="@+id/start_btn"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/btn_blue_bg"
        android:gravity="center"
        android:onClick="onClickStart"
        android:text="@string/room_create"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/user_name_tv" />

</androidx.constraintlayout.widget.ConstraintLayout>