<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <video.pano.audiochat.view.CommonTitle
        android:id="@+id/audio_log_upload_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:customTitle="@string/setting_audio_log_upload"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/audio_log_upload_content"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text_bg_small_radius"
        android:gravity="top|start"
        android:hint="@string/setting_feedback_problem_des"
        android:inputType="text"
        android:padding="10dp"
        android:textColor="@color/color_333"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/audio_log_upload_title"
        app:layout_constraintWidth_percent="0.85" />

    <TextView
        android:id="@+id/send_btn"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_blue_bg"
        android:gravity="center"
        android:onClick="onClickUpload"
        android:text="@string/setting_upload"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/audio_log_upload_content"
        app:layout_constraintWidth_percent="0.85" />
</androidx.constraintlayout.widget.ConstraintLayout>